--- a/core/res/res/values/symbols.xml
+++ b/core/res/res/values/symbols.xml
@@ -1801,4 +1801,7 @@
   <!-- Wifi -->
   <java-symbol type="bool" name="config_wifiApStartInterface" />
 
+  <!-- Config IME switcher -->
+  <java-symbol type="bool" name="config_show_IMESwitcher" />
+
 </resources>
