--- a/core/res/res/drawable/ic_notification_cast_connecting.xml
+++ b/core/res/res/drawable/ic_notification_cast_connecting.xml
@@ -30,4 +30,7 @@
     <!-- Kill app toast -->
     <string name="app_killed_message">App Killed</string>
 
+    <!-- Kill app toast -->
+    <string name="app_killed_message">App Killed</string>
+
 </resources>
