--- a/core/res/res/values/ok_symbols.xml
+++ b/core/res/res/values/ok_symbols.xml
@@ -54,7 +54,10 @@
   <java-symbol type="string" name="disable_navigation_pie_error" />
 
   <!-- Power menu -->
-  <java-symbol type="color" name="power_menu_icon_default_color" />
-  <java-symbol type="color" name="power_menu_text_default_color" />
+  <java-symbol type="color"  name="power_menu_icon_default_color" />
+  <java-symbol type="color"  name="power_menu_text_default_color" />
+  <java-symbol type="id" name="icon1" />
+  <java-symbol type="id" name="icon2" />
+  <java-symbol type="id" name="icon3" />
 
 </resources>
