Switch WiFi AP by short pressing the back side of WiFi tile
Thanks to kufikugel for the help :)

Change-Id: Idefc540e68ae336be126eec657079642c3b3f74b

--- a/packages/SystemUI/res/values/ok_strings.xml
+++ b/packages/SystemUI/res/values/ok_strings.xml
@@ -46,4 +46,6 @@
     <string name="halo_signal_bars_1">ONE BAR</string>
     <string name="halo_signal_bars_none">NO BARS</string>
 
+    <string name="wifi_ap_disabled">WiFi AP disabled</string>
+    <string name="wifi_ap_enabled">WiFi AP enabled</string>
 </resources>
