--- a/packages/SystemUI/res/values/styles.xml
+++ b/packages/SystemUI/res/values/styles.xml
@@ -178,6 +178,13 @@
         <item name="android:textSize">14dp</item>
     </style>
 
+    <style name="TextAppearance.StatusBar.Battery" parent="@*android:style/TextAppearance.StatusBar.Icon">
+        <!-- Note: must be dp to fit in status bar -->
+        <item name="android:textSize">12dp</item>
+        <item name="android:textStyle">normal</item>
+        <item name="android:textColor">@color/batterymeter_charge_color</item>
+    </style>
+
     <style name="TextAppearance.StatusBar.NetworkStats"
            parent="@*android:style/TextAppearance.StatusBar">
         <item name="android:layout_width">wrap_content</item>
