--- a/core/res/res/values/symbols.xml
+++ b/core/res/res/values/symbols.xml
@@ -1834,4 +1834,7 @@
   <java-symbol type="string" name="app_killed_message" />
 
   <java-symbol type="bool" name="config_offscreenGestureSupport" />
+
+  <!-- UI theme mode -->
+  <java-symbol type="integer" name="config_uiThemeMode" />
 </resources>
