[1/3] Base: Add offscreen gesture support
Currently only oppo devices support this
To enable use overlay
    <bool name="config_offscreenGestureSupport">true</bool>

Offscreen gestures are gestures drawn on the screen
when off. Oppo supports the following gestures
V, circle, II, <, >, double tap

The default mapping form oppo are
V - toggle torch
circle - start camera
II - play/pause musiv
> - next track
< - previous track

This gestures are reported as keys F3,F4,F5,F6,F7,F8

This change also switches to the oppo dt2w implementation
in kernel.

This also adds the base support for volume key music track
control since this is sharing the same code

PS2
fixed broken volume wake

PS3
use sendBroadcastAsUser

PS4
also log key scan code

Change-Id: I89914d7ecc25dd1e13e60793233ee0db8dd1feed

Conflicts:
	core/java/android/provider/Settings.java
	core/res/res/values/config.xml
	core/res/res/values/symbols.xml

--- a/core/res/res/values/config.xml
+++ b/core/res/res/values/config.xml
@@ -1354,4 +1354,6 @@
          setting is used to determine, whether lidOpenRotation has to be
          applied. -->
     <bool name="config_hasRemovableLid">false</bool>
+
+    <bool name="config_offscreenGestureSupport">false</bool>
 </resources>
