--- a/core/res/res/values/symbols.xml
+++ b/core/res/res/values/symbols.xml
@@ -1833,4 +1833,6 @@
 
   <!-- Developer settings - Kill app back press -->
   <java-symbol type="string" name="app_killed_message" />
+
+  <java-symbol type="bool" name="config_offscreenGestureSupport" />
 </resources>
