--- a/packages/SystemUI/res/layout/status_bar_expanded_header.xml
+++ b/packages/SystemUI/res/layout/status_bar_expanded_header.xml
@@ -84,6 +84,16 @@
         android:contentDescription="@string/accessibility_clear_all"
         />     
 
+    <ImageView android:id="@+id/edit_mode_button"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:scaleType="center"
+        android:src="@drawable/ic_notify_edit_normal"
+        android:background="@drawable/ic_notify_button_bg"
+        android:visibility="gone"
+        android:contentDescription="@string/accessibility_clear_all"
+        />
+
      <ImageView android:id="@+id/halo_button"
         android:layout_width="50dp"
         android:layout_height="50dp"
