--- a/packages/SystemUI/res/values/custom_strings.xml
+++ b/packages/SystemUI/res/values/custom_strings.xml
@@ -46,7 +46,7 @@
     <!-- Screen record notification error title -->
     <string name="screenrecord_notif_error">Unable to record screen</string>
 
-    <string name="network_4G">4G</string>
+    <string name="network_4G">4G/LTE</string>
     <string name="network_3G_only" translatable="false">3G Only</string>
     <string name="network_3G_auto" translatable="false">2G/3G Auto</string>
     <string name="network_3G" translatable="false">2G/3G Pref</string>
@@ -54,9 +54,6 @@
 
     <string name="quick_settings_quiethours_label">Quiet hours</string>
     <string name="quick_settings_quiethours_off_label">Quiet hours off</string>
-    <string name="quick_settings_location_mode_high">High</string>
-    <string name="quick_settings_location_mode_battery">Battery</string>
-    <string name="quick_settings_location_mode_sensors">Device</string>
     <string name="quick_settings_sleep_label_back_15">15s</string>
     <string name="quick_settings_sleep_label_back_30">30s</string>
     <string name="quick_settings_sleep_label_back_60">60s</string>
@@ -65,10 +62,17 @@
     <string name="quick_settings_sleep_label_back_600">10m</string>
     <string name="quick_settings_sleep_label_back_1800">30m</string>
     <string name="quick_settings_sleep_label_back_unknown">0000</string>
+    <string name="quick_settings_location_mode_high">High</string>
+    <string name="quick_settings_location_mode_battery">Battery</string>
+    <string name="quick_settings_location_mode_sensors">Device</string>
+    <string name="quick_settings_network_type">Status</string>
+    <string name="quick_settings_network_unknown">Unknown</string>
+    <string name="quick_settings_network_disable">\nNo internet</string>
+    <string name="quick_settings_quiethours_label">Quiet hours</string>
+    <string name="quick_settings_quiethours_off_label">Quiet hours off</string>
     <string name="quick_settings_ringer_on">Sound on</string>
     <string name="quick_settings_ringer_off">Sound off</string>
     <string name="quick_settings_ringer_normal">Sound</string>
-    <string name="quick_settings_rssi_type_label">Type</string>
     <string name="quick_settings_screen_sleep">Go to sleep</string>
     <string name="quick_settings_sync">Sync</string>
     <string name="quick_settings_sync_off">Sync off</string>
