--- a/packages/SystemUI/res/values/ok_strings.xml
+++ b/packages/SystemUI/res/values/ok_strings.xml
@@ -76,4 +76,5 @@
     <!-- [CHAR LIMIT=10] Running services, summary of foreground processes -->
     <string name="service_used_mem"><xliff:g id="memory">%1$s</xliff:g> used</string>
 
+    <string name="screenshot_delete_confirmation">Screenshot deleted</string>
 </resources>
