--- a/packages/SystemUI/res/values/ok_strings.xml
+++ b/packages/SystemUI/res/values/ok_strings.xml
@@ -77,4 +77,5 @@
     <string name="service_used_mem"><xliff:g id="memory">%1$s</xliff:g> used</string>
 
     <string name="screenshot_delete_confirmation">Screenshot deleted</string>
+    <string name="status_bar_notification_hide_icon_packages">Hide app\'s notification icon(s)</string>
 </resources>
