[1/2] Base: QS Ribbon style
Allow choose 3 columns, 4 columns, Dynamic mode, and both (dynamic and ribbon)

Ribbon tiles can customized via OmniGears parts
allow can choose Ribbon tiles to linking with QuickSettings or independent

OmniGears parts taken from CyanogenMod (thanks)

also introduce Flip vertical on Ribbon mode

4850/8

Change-Id: Ic622ae7cc5cefbe0265c504c554bd6c0d27a995a

--- a/packages/SystemUI/res/values/custom_strings.xml
+++ b/packages/SystemUI/res/values/custom_strings.xml
@@ -46,7 +46,7 @@
     <!-- Screen record notification error title -->
     <string name="screenrecord_notif_error">Unable to record screen</string>
 
-    <string name="network_4G">4G</string>
+    <string name="network_4G">4G/LTE</string>
     <string name="network_3G_only" translatable="false">3G Only</string>
     <string name="network_3G_auto" translatable="false">2G/3G Auto</string>
     <string name="network_3G" translatable="false">2G/3G Pref</string>
