--- a/packages/SystemUI/res/layout/quick_settings_tile_back.xml
+++ b/packages/SystemUI/res/layout/quick_settings_tile_back.xml
@@ -24,6 +24,7 @@
     android:orientation="vertical">
 
     <LinearLayout
+        android:id="@+id/images"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="top"
