--- a/packages/SystemUI/res/values/custom_strings.xml
+++ b/packages/SystemUI/res/values/custom_strings.xml
@@ -18,6 +18,7 @@
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <!-- Quick Settings Wi-Fi Back Tile Tethering label -->
     <string name="quick_settings_wifi_tethering_label">Tethering</string>
+    <string name="quick_settings_wifi_tethering_off_label">Tethering Off</string>
 
     <!-- Quick Settings Bluetooth Not Discoverable label -->
     <string name="quick_settings_bluetooth_not_discoverable_label">Not discoverable</string>
@@ -26,7 +27,7 @@
     <string name="quick_settings_bluetooth_discoverable_label">Discoverable</string>
 
     <!-- Quick Settings Bluetooth Not Connected -->
-    <string name="quick_settings_bluetooth_disabled">Disabled</string>
+    <string name="quick_settings_bluetooth_disabled">Disable</string>
 
     <!-- Quick Settings Bluetooth Number of Paired Devices -->
     <string name="quick_settings_bluetooth_number_paired"><xliff:g id="number">%d</xliff:g> Devices paired</string>
@@ -68,8 +69,6 @@
     <string name="quick_settings_network_type">Status</string>
     <string name="quick_settings_network_unknown">Unknown</string>
     <string name="quick_settings_network_disable">\nNo internet</string>
-    <string name="quick_settings_quiethours_label">Quiet hours</string>
-    <string name="quick_settings_quiethours_off_label">Quiet hours off</string>
     <string name="quick_settings_ringer_on">Sound on</string>
     <string name="quick_settings_ringer_off">Sound off</string>
     <string name="quick_settings_ringer_normal">Sound</string>
