--- a/packages/SystemUI/res/values/custom_strings.xml
+++ b/packages/SystemUI/res/values/custom_strings.xml
@@ -18,7 +18,6 @@
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <!-- Quick Settings Wi-Fi Back Tile Tethering label -->
     <string name="quick_settings_wifi_tethering_label">Tethering</string>
-    <string name="quick_settings_wifi_tethering_off_label">Tethering Off</string>
 
     <!-- Quick Settings Bluetooth Not Discoverable label -->
     <string name="quick_settings_bluetooth_not_discoverable_label">Not discoverable</string>
@@ -27,7 +26,7 @@
     <string name="quick_settings_bluetooth_discoverable_label">Discoverable</string>
 
     <!-- Quick Settings Bluetooth Not Connected -->
-    <string name="quick_settings_bluetooth_disabled">Disable</string>
+    <string name="quick_settings_bluetooth_disabled">Disabled</string>
 
     <!-- Quick Settings Bluetooth Number of Paired Devices -->
     <string name="quick_settings_bluetooth_number_paired"><xliff:g id="number">%d</xliff:g> Devices paired</string>
@@ -47,7 +46,7 @@
     <!-- Screen record notification error title -->
     <string name="screenrecord_notif_error">Unable to record screen</string>
 
-    <string name="network_4G">4G/LTE</string>
+    <string name="network_4G">4G</string>
     <string name="network_3G_only" translatable="false">3G Only</string>
     <string name="network_3G_auto" translatable="false">2G/3G Auto</string>
     <string name="network_3G" translatable="false">2G/3G Pref</string>
@@ -82,4 +81,5 @@
     <string name="quick_settings_usb_tether_off_label">Disconnected</string>
     <string name="quick_settings_usb_tether_connected_label">Tethering off</string>
     <string name="quick_settings_usb_tether_on_label">Tethering</string>
+
 </resources>
