[1/2] SystemUI: Add brightness slider to notification drawer
adds a brightness slider below the expanded statusbar header and
(if enabled) quick settings ribbons

also wrap an if around gesture recorder in the fling methods, only
call them if DEBUG is enabled.

Change-Id: I65077f5ddb20aa9f13813eedfaa0cb09a667eb88

--- a/packages/SystemUI/res/layout/status_bar_expanded.xml
+++ b/packages/SystemUI/res/layout/status_bar_expanded.xml
@@ -70,6 +70,11 @@
             android:layout_height="@dimen/notification_min_height"
             />
 
+        <ViewStub android:id="@+id/notification_brightness_slider"
+            android:layout="@layout/quick_settings_brightness_dialog"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/notification_row_min_height"/>
+
         <TextView
             android:id="@+id/emergency_calls_only"
             android:textAppearance="@style/TextAppearance.StatusBar.Expanded.Network.EmergencyOnly"
