--- a/core/res/res/values/ok_symbols.xml
+++ b/core/res/res/values/ok_symbols.xml
@@ -41,4 +41,20 @@
   <java-symbol type="integer" name="config_uiThemeMode" />
   <java-symbol type="string" name="theme_auto_switch_mode_error" />
 
+  <!-- Pie controls -->
+  <java-symbol type="string" name="global_actions_pie_mode_on_status" />
+  <java-symbol type="string" name="global_actions_pie_mode_off_status" />
+  <java-symbol type="drawable" name="ic_lock_pie" />
+  <java-symbol type="string" name="disable_pie_navigation_error" />
+
+  <!-- Navigation bar -->
+  <java-symbol type="string" name="global_actions_nav_bar_mode_on_status" />
+  <java-symbol type="string" name="global_actions_nav_bar_mode_off_status" />
+  <java-symbol type="drawable" name="ic_lock_navbar" />
+  <java-symbol type="string" name="disable_navigation_pie_error" />
+
+  <!-- Power menu -->
+  <java-symbol type="color" name="power_menu_icon_default_color" />
+  <java-symbol type="color" name="power_menu_text_default_color" />
+
 </resources>
