Base: Improve QuickSettings and bugfix
since im going to rewrite the QS but need more time, so i upload another commit
to fix some bugs and also improve the QS :)

based from
https://gerrit.paranoidandroid.co/#/c/3569/ and https://gerrit.paranoidandroid.co/#/c/3594/
thanks @BigBrother1984

slimroms patch (forgot the commit xD)
thanks @kufikugel

and small changes in our QS implementation

fix http://jira.omnirom.org/browse/OMNI-515
fix http://jira.omnirom.org/browse/OMNI-568
fix http://jira.omnirom.org/browse/OMNI-569

merged https://gerrit.omnirom.org/#/c/5164/
       https://gerrit.omnirom.org/#/c/5163/
into this since this commit now works :)

add longpress SleepTile toggle powermenu
fix bluetooth icon back tile
fix sleeptimeout mode
make sure invalidate all tiles views are called
remove unneeded animation listener (thanks @BigBrother1984)
fix Tiles background color
only auto arrange if dynamic mode enable on landscape

Change-Id: I0445e2018b1d0e4242850c7989b4285a3a7114c7

Conflicts:
	packages/SystemUI/res/layout/quick_settings_tile_back_battery.xml
	packages/SystemUI/res/values/colors.xml
	packages/SystemUI/res/values/custom_dimens.xml
	packages/SystemUI/res/values/custom_strings.xml
	packages/SystemUI/src/com/android/systemui/statusbar/phone/PhoneStatusBar.java
	packages/SystemUI/src/com/android/systemui/statusbar/phone/QuickSettings.java
	packages/SystemUI/src/com/android/systemui/statusbar/phone/QuickSettingsBasicBackBatteryTile.java
	packages/SystemUI/src/com/android/systemui/statusbar/phone/QuickSettingsBatteryFlipTile.java
	packages/SystemUI/src/com/android/systemui/statusbar/phone/QuickSettingsContainerView.java
	packages/SystemUI/src/com/android/systemui/statusbar/phone/QuickSettingsModel.java
	packages/SystemUI/src/com/android/systemui/statusbar/phone/QuickSettingsTileView.java

--- a/packages/SystemUI/res/drawable/qs_tile_background_no_hover.xml
+++ b/packages/SystemUI/res/drawable/qs_tile_background_no_hover.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
 /*
-** Copyright 2012, The Android Open Source Project
+** Copyright (C) 2014 ParanoidAndroid Project.
 **
 ** Licensed under the Apache License, Version 2.0 (the "License");
 ** you may not use this file except in compliance with the License.
@@ -17,10 +17,7 @@
 */
 -->
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_pressed="true">
-	<color android:color="@color/qs_background_pressed_color" />
-    </item>
     <item>
-        <color android:color="@color/qs_background_color" />
+        <color android:color="#161616" />
     </item>
 </selector>
