--- a/packages/SystemUI/res/values/custom_strings.xml
+++ b/packages/SystemUI/res/values/custom_strings.xml
@@ -27,7 +27,8 @@
     <string name="quick_settings_bluetooth_discoverable_label">Discoverable</string>
 
     <!-- Quick Settings Bluetooth Not Connected -->
-    <string name="quick_settings_bluetooth_disabled">Disable</string>
+    <string name="quick_settings_bluetooth_enabled">Enabled</string>
+    <string name="quick_settings_bluetooth_disabled">Disabled</string>
 
     <!-- Quick Settings Bluetooth Number of Paired Devices -->
     <string name="quick_settings_bluetooth_number_paired"><xliff:g id="number">%d</xliff:g> Devices paired</string>
