Base: change UserTile view
using a Rounded Image

https://www.dropbox.com/s/qf8qga911o88fmo/Screenshot_2014-02-24-03-04-21.png

add FlipTile for this
Front = new View
Back = default view

Change-Id: I4fb1c88f8abcb91ed67f0a6334634d7c39df6df4

--- a/packages/SystemUI/res/layout/quick_settings_tile_back_user.xml
+++ b/packages/SystemUI/res/layout/quick_settings_tile_back_user.xml
@@ -15,24 +15,21 @@
 -->
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:systemui="http://schemas.android.com/apk/res/com.android.systemui"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-        <com.android.systemui.widget.RoundedImageView
-             android:id="@+id/user_imageview"
+        <ImageView
+             android:id="@+id/user_back_imageview"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:src="@drawable/ic_qs_default_user"
              android:scaleType="centerCrop"
-             systemui:corner_radius="30dip"
-             systemui:is_oval="true"
              />
         <TextView
              style="@style/TextAppearance.QuickSettings.TileView.User"
-             android:id="@+id/user_textview"
+             android:id="@+id/user_back_textview"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_gravity="center_horizontal|bottom"
