--- a/core/res/res/values/symbols.xml
+++ b/core/res/res/values/symbols.xml
@@ -1847,4 +1847,7 @@
   <java-symbol type="bool" name="config_hasRotationLockSwitch" />
   <java-symbol type="string" name="toast_rotation_unlocked" />
   <java-symbol type="string" name="toast_rotation_locked" />
+
+  <java-symbol type="drawable" name="ic_privacy_guard" />
+  <java-symbol type="drawable" name="ic_privacy_guard_off" />
 </resources>
