--- a/core/res/res/values/ok_strings.xml
+++ b/core/res/res/values/ok_strings.xml
@@ -70,36 +70,22 @@
     <string name="app_ops_write_mms">write an MMS message</string>
     <string name="app_ops_write_sms">write an SMS message</string>
 
-  <!--From power menu-->
-  <java-symbol type="array" name="shutdown_reboot_options" />
-  <java-symbol type="array" name="shutdown_reboot_actions" />
-  <java-symbol type="array" name="shutdown_reboot_icons" />
-  <java-symbol type="drawable" name="ic_lock_reboot" />
-  <java-symbol type="drawable" name="ic_lock_reboot_recovery" />
-  <java-symbol type="drawable" name="ic_lock_reboot_bootloader" />
-  <java-symbol type="drawable" name="ic_lock_screenshot" />
-  <java-symbol type="drawable" name="pa_world_logo" />
-  <java-symbol type="string" name="global_actions" />
-  <java-symbol type="string" name="global_action_reboot" />
-  <java-symbol type="string" name="global_action_screenshot" />
-  <java-symbol type="string" name="reboot_confirm" />
-  <java-symbol type="string" name="reboot_progress" />
+    <!-- Label for item that opens the profile choosing dialog -->
+    <string name="global_action_choose_profile">Profile</string>
 
-  <!--Notification led-->
-  <java-symbol type="array" name="notification_light_package_mapping" />
+    <!-- The title of the profile picker dialog. -->
+    <string name="profile_picker_title">Profiles</string>
 
-  <!--Setting confirmation dialog-->
-  <java-symbol type="id" name="setting_confirmation_dialog_visual_hint" />
-  <java-symbol type="layout" name="setting_confirmation_dialog" />
-  <java-symbol type="string" name="setting_confirmation_ask_me_later" />
-  <java-symbol type="string" name="setting_confirmation_yes" />
-  <java-symbol type="string" name="setting_confirmation_no" />
+    <!-- The item label for the no profile selection item. -->
+    <string name="profile_none">None</string>
 
-  <!--Camera flash-->
-  <java-symbol type="bool" name="config_device_has_camera_flash" />
+    <!-- Name of wildcard profile. -->
+    <string name="wildcardProfile">Other</string>
 
-  <!-- Safe headset volume warning dialog -->
-  <java-symbol type="string" name="safe_headset_warning_title" />
-  <java-symbol type="string" name="safe_headset_warning_message" />
-  <java-symbol type="drawable" name="safe_headset_volume_warning" />
+    <!-- Names of default profiles. -->
+    <string name="profileNameDefault">Default</string>
+    <string name="profileNameWork">Work</string>
+    <string name="profileNameHome">Home</string>
+    <string name="profileNameSilent">Silent</string>
+    <string name="profileNameNight">Night</string>
 </resources>
