[1/2] Base: On-The-Go mode
On-The-Go turns on the camera of your phone and streams it to an overlay,
which is drawn over everything.
this makes you feel like your display is transparent, as you see the content
behind it.

its really useful when you are using your phone while walking, thats why
we called it "On-The-Go"

allows to change transparency of the overlay via the notification.

have fun!

Change-Id: I3efccb5fac41a946f6cb4992e9181422980ee5e4

--- a/packages/SystemUI/res/values/ok_strings.xml
+++ b/packages/SystemUI/res/values/ok_strings.xml
@@ -69,4 +69,12 @@
 
     <string name="screenshot_delete_confirmation">Screenshot deleted</string>
     <string name="status_bar_notification_hide_icon_packages">Hide app\'s notification icon(s)</string>
+
+    <string name="onthego_notif_ticker">On-The-Go activated</string>
+    <string name="onthego_notif_title">On-The-Go is active</string>
+    <string name="onthego_notif_stop">Stop</string>
+    <string name="onthego_notif_options">Options</string>
+    <string name="onthego_notif_error">Unable to start On-The-Go</string>
+    <string name="onthego_transparency">Transparency</string>
+
 </resources>
