--- a/core/res/res/values/ok_strings.xml
+++ b/core/res/res/values/ok_strings.xml
@@ -69,4 +69,8 @@
     <string name="app_ops_use_voice_volume">control the voice call volume</string>
     <string name="app_ops_write_mms">write an MMS message</string>
     <string name="app_ops_write_sms">write an SMS message</string>
+
+    <!-- label for item that takes On-The-Go in the phone options dialog -->
+    <string name="global_action_onthego">On-The-Go Mode</string>
+
 </resources>
