--- a/packages/SystemUI/res/layout/quick_settings_tile_back_battery.xml
+++ b/packages/SystemUI/res/layout/quick_settings_tile_back_battery.xml
@@ -47,12 +47,9 @@
             />
         <com.android.systemui.BatteryPercentMeterView
             android:id="@+id/percent_battery"
-            style="@style/TextAppearance.QuickSettings.TileView"
-            android:textColor="@color/batterymeter_percent_color"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:gravity="center_vertical"
+            android:layout_height="32dp"
+            android:layout_gravity="top|center_horizontal"
             systemui:batteryView="quicksettings"
             />
         <TextView
