Frameworks: navigation bar IME cursor
Old idea from AOKP revamped for kk 4.4

- permanent option (not configurable) due it is very usefull
- left arrow single press = cursor left; longpress = cursor one line up; longpress hold = faster several lines up
- right arrow same as left arrow but opposite directions
- accessibility events added
- transistion added

PS;
- add other flag handling
PS
- enable haptic feedback

rebase

Change-Id: If08904cb709b5969cac451515ec661adbcc1887c

Conflicts:
	core/java/com/android/internal/util/slim/SlimActions.java
	packages/SystemUI/res/values/slim_strings.xml
	packages/SystemUI/src/com/android/systemui/statusbar/phone/NavigationBarView.java

Conflicts:
	packages/SystemUI/src/com/android/systemui/statusbar/phone/NavigationBarTransitions.java
	packages/SystemUI/src/com/android/systemui/statusbar/phone/NavigationBarView.java

--- a/packages/SystemUI/res/values/ok_strings.xml
+++ b/packages/SystemUI/res/values/ok_strings.xml
@@ -78,4 +78,8 @@
     <!-- Kill app toast -->
     <string name="app_killed_message">App Killed</string>
 
+    <!-- Navigation bar IME navigation -->
+    <string name="accessibility_ime_navigation_left">Cursor left</string>
+    <string name="accessibility_ime_navigation_right">Cursor right</string>
+
 </resources>
