--- a/packages/SystemUI/res/values/colors.xml
+++ b/packages/SystemUI/res/values/colors.xml
@@ -51,4 +51,6 @@
     <!-- Navigation bar -->
     <color name="navigationbar_button_default_color">#FFFFFFFF</color>
 
+    <color name="navring_system_icon_default_color">#FF000000</color>
+
 </resources>
