--- a/core/res/res/values/ok_strings.xml
+++ b/core/res/res/values/ok_strings.xml
@@ -94,4 +94,9 @@
     <!-- Error message if user want to try to disable all navigation options -->
     <string name="disable_navigation_pie_error">You cannot disable the navigation bar. No other navigation is enabled. Enable first pie controls to turn off the navigation bar.</string>
 
+    <string name="global_actions_pie_mode_on_status">SlimPie is ON</string>
+    <string name="global_actions_pie_mode_off_status">SlimPie is OFF</string>
+    <string name="global_actions_nav_bar_mode_on_status">Navigation bar is ON</string>
+    <string name="global_actions_nav_bar_mode_off_status">Navigation bar is OFF</string>
+
 </resources>
