--- a/core/res/res/values/ok_symbols.xml
+++ b/core/res/res/values/ok_symbols.xml
@@ -53,4 +53,8 @@
   <java-symbol type="drawable" name="ic_lock_navbar" />
   <java-symbol type="string" name="disable_navigation_pie_error" />
 
+  <!-- Power menu -->
+  <java-symbol type="color" name="power_menu_icon_default_color" />
+  <java-symbol type="color" name="power_menu_text_default_color" />
+
 </resources>
