--- a/core/res/res/values/ok_symbols.xml
+++ b/core/res/res/values/ok_symbols.xml
@@ -48,6 +48,7 @@
   <java-symbol type="string" name="disable_pie_navigation_error" />
 
   <!-- Navigation bar -->
+  <java-symbol type="string" name="global_actions" />
   <java-symbol type="string" name="global_actions_nav_bar_mode_on_status" />
   <java-symbol type="string" name="global_actions_nav_bar_mode_off_status" />
   <java-symbol type="drawable" name="ic_lock_navbar" />
